[tool.poetry]
name = "oracledb-exporter-async"
version = "0.1.6"
description = "Prometheus Oracle database exporter"
authors = ["Nik Mikhaylichenko <nn.mikh@yandex.ru>"]
license = "MIT"
readme = "README.md"
packages = [{include = "odbe"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
flask-apscheduler = "^1.12.4"
prometheus-flask-exporter = "^0.22.3"
oracledb = "^1.3.1"
flask-sqlalchemy = "^3.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
ipython = "^8.11.0"
rich = "^13.3.2"
pylint = "^2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
